fix: alignment of the scroll to top button

--- a/src/components/ScrollToTop.module.scss
+++ b/src/components/ScrollToTop.module.scss
@@ -4,8 +4,8 @@ $trans:  200ms ease-out;
 
 .scrollBtn {
   position: fixed;
-  bottom: 2rem;
-  right: 2rem;
+  bottom: 5rem;
+  right: 0.5rem;
   background: $bg;
   color: $accent;
   border: none;
